"adding form validation"

--- a/signup-form/styles.css
+++ b/signup-form/styles.css
@@ -12,4 +12,12 @@ input{
     display: block;
     margin: 10px auto;
     padding: 4px;
+    outline: none;
+}
+.success {
+    border: 2px solid limegreen
+}
+
+.error {
+    border: 2px solid crimson;
 }
